<h5>2.35  Alpha 1                  [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.6
- added namespaces (mamba)
- moved constants to a separate file (mamba)
- moved Action and Filter classes to /class/plugins (mamba)
- added sample data (mamba)


<h5>2.34  Beta 6                      [NOT RELEASED]</h5>
<hr>
Changes by Ross B.
Tested with Xoops 2.5.7.1 (2.5.8 required)
Updated Paypal Gateway:
- use current protocols HTTP/1.1, ssl, port 443
- send verification emails after payment cleared (previously before)
- offload payment processing (after paypal confirm) to separate thread to decouple paypal transaction time from total transaction time (due to site load)
- include transaction ID in verification emails
- changed logname to gateway_log.php
- fully tested using sandbox

Do not send validation emails prior to payment verification. May want to re-visit and make config option for scenario's where payment is in escrow until shipped or received.
Changed oledrion_thankyou.tpl and oledrion_cancelpurchase.tpl to links to point to main site URL (whatever is configured as home module, as opposed to OLEDRION_URL)
Added per-product checkout state override flags (skip_packing, skip_location, skip_delivery) to skip corresponding checkout states to allow a mix of products, some of which may not require these checkout states.
NOTE: have not yet tested creation of above flags @module install, used phpmydamin: tinyint(1), not NULL, default:0.
Assume that "skip delivery" for all products in cart implies user information fields: first_name, phone_numbers and address are optional, else manditory at checkout. Collect minimum info for privacy reasons.
Changed email log path from XOOPS_UPLOAD_PATH to OLEDRION_UPLOAD_PATH