@@ -1,3 +1,8 @@
+<h5>2.35  Beta 1                  [2018-07-08]</h5>  Dev: Xoops 2.5.9, PHP 7.2.7, PHP 7.3.0 Alpha 3
+- fixed Gateway issue (@rossbcan/mamba)
+- code cleanup (mamba)
+
+
 <h5>2.35  Alpha 1                  [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.6
 - added namespaces (mamba)
 - moved constants to a separate file (mamba)
